feat: implementing policy
